<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assist SDK Test</string>

    <string name="activity_about_label">О приложении</string>
    <string name="app_version">Версия: %1$s</string>
    <string name="sdk_version">Версия SDK: %1$s</string>

    <string name="action_settings">Настройки платежа</string>
    <string name="action_customer">О покупателе</string>

    <string name="payWeb">Pay Web</string>

    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
        <item>UK</item>
    </string-array>

    <string-array name="currency">
        <item>RUB</item>
        <item>USD</item>
        <item>EUR</item>
        <item>BYN</item>
    </string-array>

    <string name="please_wait">Пожалуйста, подождите&#8230;</string>

    <string name="settings_language">Язык:</string>
    <string name="settings_recurring">Рекурренты:</string>
    <string name="payment_mode">PaymentMode:</string>
    <string name="customer_name">Покупатель:</string>
    <string name="customer_contact_info">Контакты:</string>
    <string name="customer_address">Адрес:</string>

    <string name="alert_dlg_title_error">Ошибка</string>
    <string name="alert_dlg_title_network_error">Сетевая ошибка</string>

    <string name="alert_dlg_title_cancel_error">Ошибка отмены заказа</string>
    <string name="alert_dlg_cancel_error_msg">Свяжитесь со службой поддержки предприятия.</string>

    <string name="transactions_filter">Фильтр</string>
    <string name="transactions_delete_1_month_old">Удалить старше месяца</string>
    <string name="transactions_delete_2_weeks_old">Удалить старше 2х месяцев</string>

    <string name="result_title">Результат</string>
    <string name="order_state_label">Статус заказа:</string>
    <string name="order_number_label">Номер заказа:</string>
    <string name="order_amount_label">Сумма заказа:</string>
    <string name="order_comment_label">Комментарий:</string>
    <string name="order_extra_info_label">Доп. информация:</string>
    <string name="result_close_button_text">Закрыть</string>
    <string name="default_order_amount">10.11</string>
    <string name="merchant_id_label">Номер магазина в Ассист (Merchant ID):</string>
    <string name="login_label">Пользователь:</string>
    <string name="password_label">Пароль:</string>
    <string name="default_comment">test payment</string>
    <string name="customer_number_label">Номер покупателя:</string>
    <string name="signature_label">Подпись данных заказа:</string>
    <string name="use_camera_cb_label">Сканировать карту</string>
    <string name="pay_btn_text">Оплатить</string>
    <string name="pay_web_btn_text">WEB Оплата</string>
    <string name="log_btn_text">Журнал заказов</string>
    <string name="server_url_label">Сервер:</string>
    <string name="update_order_state_btn_text">Обновить</string>
    <string name="order_info_title">Информация о заказе</string>
    <string name="order_date_label">Дата заказа:</string>
    <string name="android_pay_not_installed_message">Для оплаты через Android Pay необходимо установить приложение Android Pay</string>
    <string name="item_name_format">Оплата заказа №%1$s</string>

</resources>
