<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/llAppIconName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/ivAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/app_icon" />

        <TextView
            android:id="@+id/tvAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/app_name" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvAppVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llAppIconName"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/app_version" />

    <TextView
        android:id="@+id/tvSDKVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAppVersion"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/sdk_version" />

</RelativeLayout>